[gd_scene load_steps=31 format=3 uid="uid://degh6iuglur18"]

[ext_resource type="Script" path="res://assets/Scenes/SlimeStand.gd" id="1_ws6ps"]
[ext_resource type="Texture2D" uid="uid://df8rjhs1ye5rs" path="res://assets/sprites/TileMap4.png" id="1_xmc6e"]
[ext_resource type="Texture2D" uid="uid://dmd1oh2fnbdk" path="res://assets/sprites/slime-in-jar.png" id="2_1v5o6"]
[ext_resource type="Script" path="res://scripts/HideOnReady.gd" id="3_dubqq"]

[sub_resource type="Animation" id="Animation_megwx"]
resource_name = "Apply_Spout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Spout:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(0.406126, 4.75683, 1),
"update": 0,
"values": [Vector2(0, -42), Vector2(0, -24), Vector2(0, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Spout:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a6otn"]
resource_name = "Apply_Stopper"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Stopper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(0.267943, 1e+06, 1e+06, 1),
"update": 0,
"values": [Vector2(0, -33), Vector2(0, -23), Vector2(0, -22), Vector2(0, -21)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Stopper:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Stopper:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.0588235), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0pui0"]
resource_name = "End_Level_State"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Spout:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Dark:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Stopper:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Stopper:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1j6ln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Spout:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Spout:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Stopper:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Stopper:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Stopper:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -21)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../Dark:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../Dark/Eyes:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [83]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../Spout:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -42)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../Spout:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_aqs20"]
resource_name = "Remove_Spout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Spout:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.151164, 0.183848, 0.2, 0.3, 1),
"transitions": PackedFloat32Array(8480.89, 1, 1, 1, 1, 3.36358, 1),
"update": 0,
"values": [Vector2(0, -23), Vector2(0, -27), Vector2(-1, -27), Vector2(1, -27), Vector2(0, -27), Vector2(0, -27), Vector2(0, -42)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Spout:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.151164, 0.183848, 0.2),
"transitions": PackedFloat32Array(1e+06, 1, 1, 1),
"update": 0,
"values": [0.0, 0.046263, -0.0367979, 0.0]
}

[sub_resource type="Animation" id="Animation_djgg8"]
resource_name = "Remove_Stopper"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Stopper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1),
"transitions": PackedFloat32Array(1e+06, 1e+06, 2.54912, 1),
"update": 0,
"values": [Vector2(0, -21), Vector2(0, -23), Vector2(0, -22), Vector2(0, -33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Stopper:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Stopper:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.2)]
}

[sub_resource type="Animation" id="Animation_rf3g8"]
resource_name = "Start_Level_State"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Stopper:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Spout:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -42)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Stopper:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -21)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../Dark:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Spout:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vdtaf"]
resource_name = "State_Outro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Dark:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Stopper:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spout:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}

[sub_resource type="Animation" id="Animation_hwfd0"]
resource_name = "Turn_Light_Off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Dark:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_5b63v"]
resource_name = "Turn_Light_On"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.3, 2.4, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Dark:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 2.3, 2.4, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c63bw"]
_data = {
"Apply_Spout": SubResource("Animation_megwx"),
"Apply_Stopper": SubResource("Animation_a6otn"),
"End_Level_State": SubResource("Animation_0pui0"),
"RESET": SubResource("Animation_1j6ln"),
"Remove_Spout": SubResource("Animation_aqs20"),
"Remove_Stopper": SubResource("Animation_djgg8"),
"Start_Level_State": SubResource("Animation_rf3g8"),
"State_Outro": SubResource("Animation_vdtaf"),
"Turn_Light_Off": SubResource("Animation_hwfd0"),
"Turn_Light_On": SubResource("Animation_5b63v")
}

[sub_resource type="Animation" id="Animation_fm23b"]
resource_name = "Enter_Vial"
length = 2.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bright/Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_xb4e2"]
resource_name = "Exit_Level"
length = 5.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bright/Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 0]
}

[sub_resource type="Animation" id="Animation_ddb3d"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bright/Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dark/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104]
}

[sub_resource type="Animation" id="Animation_cg7od"]
resource_name = "No_Slime"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bright/Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uh1fb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bright/Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dark/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [83]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d130m"]
_data = {
"Enter_Vial": SubResource("Animation_fm23b"),
"Exit_Vial": SubResource("Animation_xb4e2"),
"Idle": SubResource("Animation_ddb3d"),
"No_Slime": SubResource("Animation_cg7od"),
"RESET": SubResource("Animation_uh1fb")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_7yid3"]
atlas = ExtResource("1_xmc6e")
region = Rect2(91, 178, 10, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnr5v"]
atlas = ExtResource("1_xmc6e")
region = Rect2(112, 176, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yepqf"]
atlas = ExtResource("1_xmc6e")
region = Rect2(96, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g23d"]
atlas = ExtResource("1_xmc6e")
region = Rect2(176, 190, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o284"]
atlas = ExtResource("1_xmc6e")
region = Rect2(80, 176, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msbae"]
atlas = ExtResource("1_xmc6e")
region = Rect2(112, 208, 16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yb82b"]
texture = ExtResource("1_xmc6e")
2:10/0 = 0
2:11/0 = 0
2:12/0 = 0
1:12/0 = 0
3:12/0 = 0
3:10/0 = 0
4:10/0 = 0
5:11/0 = 0
6:11/0 = 0
5:12/0 = 0
6:12/0 = 0
11:12/0 = 0
12:12/0 = 0

[sub_resource type="TileSet" id="TileSet_ipv25"]
sources/1 = SubResource("TileSetAtlasSource_yb82b")

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3yd"]
atlas = ExtResource("1_xmc6e")
region = Rect2(80, 176, 32, 32)

[node name="SlimeStand" type="Node2D"]
script = ExtResource("1_ws6ps")

[node name="GenerelAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Bright/Jar")
libraries = {
"": SubResource("AnimationLibrary_c63bw")
}

[node name="SlimeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d130m")
}

[node name="Bright" type="Node2D" parent="."]

[node name="ForegroundStandParts" type="Sprite2D" parent="Bright"]
z_index = 5
position = Vector2(0, -13)
texture = SubResource("AtlasTexture_7yid3")

[node name="Jar" type="Sprite2D" parent="Bright"]
z_index = 4
z_as_relative = false
position = Vector2(0, -9)
texture = SubResource("AtlasTexture_lnr5v")

[node name="Spout" type="Sprite2D" parent="Bright"]
z_index = -1
position = Vector2(0, -42)
texture = SubResource("AtlasTexture_yepqf")

[node name="Sprite2D" type="Sprite2D" parent="Bright/Spout"]
position = Vector2(0, -17)
texture = SubResource("AtlasTexture_6g23d")

[node name="BackgroundStand" type="Sprite2D" parent="Bright"]
texture = SubResource("AtlasTexture_2o284")

[node name="Stopper" type="Sprite2D" parent="Bright"]
z_index = -1
position = Vector2(0, -21)
texture = SubResource("AtlasTexture_msbae")

[node name="Slime" type="Sprite2D" parent="Bright"]
position = Vector2(0, -9)
texture = ExtResource("2_1v5o6")
hframes = 105
frame = 29

[node name="PipeStand" type="TileMap" parent="Bright"]
z_index = -2
position = Vector2(-8, 0)
tile_set = SubResource("TileSet_ipv25")
format = 2
layer_0/tile_data = PackedInt32Array(65531, 65537, 12, 65532, 131073, 12, 65533, 196609, 12, -4, 131073, 11, -65540, 131073, 11, -131076, 131073, 11, -262148, 131073, 10, -262147, 196609, 10, -262146, 196609, 10, -262145, 196609, 10, -327680, 262145, 10, -196612, 131073, 11, -262144, 720897, 12, 65530, 786433, 12)

[node name="Dark" type="Node2D" parent="."]
visible = false
z_index = 100

[node name="Eyes" type="Sprite2D" parent="Dark"]
position = Vector2(0, -9)
texture = ExtResource("2_1v5o6")
hframes = 105
frame = 83

[node name="Polygon2D" type="Polygon2D" parent="Dark"]
z_index = -1
color = Color(0, 0, 0, 0.956863)
polygon = PackedVector2Array(1000, 1000, 1000, -1000, -1000, -1000, -1000, 1000)

[node name="HideOnReady" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.447059)
script = ExtResource("3_dubqq")

[node name="Sprite2D" type="Sprite2D" parent="HideOnReady"]
texture = SubResource("AtlasTexture_sc3yd")
